   Version 0.46
   Version 0.45
   Version 0.44
   Version 0.43
   Version 0.42
   Version 0.41
   Version 0.40
   Version 0.39
   Version 0.38
   Version 0.37
   Version 0.36
   Version 0.35

-----------------------------------------------------------------------
 Version 0.49
 ============

 Released on 

 New features and improvements:

   - ofaDossierManager: gives a title to the dialog.
   - ofaPreferences: make the dialog non-modal (todo #992).

 Bug fixes:

   - ExportAssistant: all strings are quoted (todo #1023).
   - ofaIDateFilter: keep both 'from' and 'to' dates as user preferences (todo #978).
   - ofaNomodalPage: setup initial default size and position (todo #997).
   - ofoAccount: import close indicator.

 Other changes:

   - Do not install the resources which are managed as GResource (todo #970).
   - myDateCombo: migrate to G_ADD_PRIVATE (todo #994).
   - myDecimalCombo: migrate to G_ADD_PRIVATE (todo #994).
   - myFieldCombo: migrate to G_ADD_PRIVATE (todo #994).
   - myFileMonitor: migrate to G_ADD_PRIVATE (todo #994).
   - myIDialog: new get_default_size() interface method.
   - myProgressBar: migrate to G_ADD_PRIVATE (todo #994).
   - mySettings: migrate to G_ADD_PRIVATE (todo #994).
   - my_utils_quote() is renamed to my_utils_quote_single().
   - my_utils_quote_regexp(): new function.
   - my_utils_unquote_regexp(): new function.
   - my_utils_uri_get_content(): new function.
   - my_utils_window_restore_position(): now returns %TRUE is a position has been restored.
   - ofaButtonsBox: migrate to G_ADD_PRIVATE (todo #994).
   - ofaDateFilterHVBin: migrate to G_ADD_PRIVATE (todo #994).
   - ofaDateFilterHVBin: migrate to GResource (todo #826).
   - ofaDBMSRootBin: migrate to G_ADD_PRIVATE (todo #994).
   - ofaDBMSRootBin: migrate to GResource (todo #826).
   - ofaDossierDeletePrefsBin: migrate to G_ADD_PRIVATE (todo #994).
   - ofaDossierDeletePrefsBin: migrate to GResource (todo #826).
   - ofaFileDir: migrate to G_ADD_PRIVATE (todo #994).